# Coding-Standards

./: .cursorrules  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CODING_STANDARDS.md  CODING_STANDARDS_QUICK_REF.md  CURSOR_SETUP.md  INSTALLATION.md  LICENSE  MANIFEST.in  ONBOARDING.md  README.md  SUMMARY.md  VERIFICATION.md  pyproject.toml  requirements-dev.txt  requirements.txt
.antigravity/rules/: documentation_standards.mdc  error_handling.mdc  markdown_standards.mdc  testing_standards.mdc
.github/workflows/: ci.yml
docs/guides/: AI_COLLABORATION_GUIDE.md  AI_PROMPT_STANDARDS.md  AI_PROMPT_STANDARDS_QUICK_REF.md  CODE_COMPLIANCE.md  CURSOR_SETUP.md  MARKDOWN_STANDARDS.md  MARKDOWN_STANDARDS_QUICK_REF.md  ONBOARDING.md  SECURITY_SCANNING.md  SENSITIVE_DATA_HOOK.md  VERIFICATION.md
docs/standards/: GO_CODING_STANDARDS.md  JAVASCRIPT_CODING_STANDARDS.md  PYTHON_CODING_STANDARDS.md  PYTHON_CODING_STANDARDS_QUICK_REF.md
docs/tutorials/: DATA_SCIENCE_ONBOARDING.md
examples/: README.md  __init__.py  bad_example.py  good_example.py  test_example.py
src/ai_coding_standards/: __init__.py  cli.py  debug_paths.py
src/ai_coding_standards/data/: .editorconfig  .flake8  .pre-commit-config.yaml  .pylintrc  AI_PROMPT_STANDARDS_QUICK_REF.md  pyproject.toml
src/ai_coding_standards/data/.cursor/rules/: code_organization.mdc  function_standards.mdc  naming_conventions.mdc
src/ai_coding_standards/data/go/: .golangci.yml
src/ai_coding_standards/data/javascript/: .eslintrc.json  tsconfig.json
src/coding_standards/: __init__.py  cli.py  debug_paths.py
src/coding_standards/data/: pyproject.toml
tests/: test_cli_helpers.py  test_debug_paths.py  test_sensitive_data_check.py
