[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-standards"
version = "1.0.0"
description = "Comprehensive coding standards and best practices for Python development with AI assistants"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    {name = "Coding Standards Team"}
]
dependencies = [
    "importlib-resources>=5.0.0; python_version<'3.9'",
]
keywords = ["coding-standards", "python", "ai", "code-quality", "linting", "formatting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "coverage>=7.2.0",
    "pre-commit>=3.0.0",
]
# For Python < 3.9 compatibility
importlib_resources = ["importlib-resources>=5.0.0; python_version<'3.9'"]

[project.scripts]
coding-standards = "coding_standards.cli:main"

[project.urls]
Homepage = "https://github.com/peterhallen/coding-standards"
Documentation = "https://github.com/peterhallen/coding-standards#readme"
Repository = "https://github.com/peterhallen/coding-standards"
Issues = "https://github.com/peterhallen/coding-standards/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["coding_standards"]
include-package-data = true

[tool.setuptools.package-data]
ai_coding_standards = [
    "data/**/*",
    "data/.*",
    "data/.cursor/**/*",
]

[tool.black]
# Black code formatter configuration
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
# isort import sorter configuration
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]

# Import sections
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# Known standard library
known_stdlib = [
    "argparse", "collections", "datetime", "json", "logging", "os", "pathlib",
    "sys", "time", "typing", "unittest", "urllib"
]

# Known third party
known_thirdparty = [
    "boto3", "botocore", "yaml", "pytest", "aiohttp", "asyncio"
]

[tool.mypy]
# mypy type checker configuration
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Ignore missing imports for third-party libraries
[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "yaml.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ai_coding_standards.debug_paths"
ignore_errors = true

[tool.pylint.master]
# Pylint configuration (reference to .pylintrc)
# Main config is in .pylintrc file

[tool.pytest.ini_options]
# pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
# Coverage.py configuration
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/setup.py",
    "*/conftest.py",
    "*/conftest.py",
    "examples/*",
    "*/bad_example.py",  # Educational file, intentionally not tested
    "*/debug_paths.py"
]

[tool.coverage.report]
# Coverage reporting thresholds
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]

# Minimum coverage percentage
fail_under = 80
